- Alert Message - Logic Done - Score Done

--- a/GuessTheFlag/Base.lproj/Main.storyboard
+++ b/GuessTheFlag/Base.lproj/Main.storyboard
@@ -16,20 +16,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3eN-97-rtH">
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3eN-97-rtH">
                                 <rect key="frame" x="84.666666666666686" y="363" width="224" height="114"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="us"/>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Mw-71-h2t"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x4c-Pu-csV">
                                 <rect key="frame" x="84.666666666666686" y="119" width="224" height="114"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="us"/>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="A7O-dY-KyZ"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WFh-Ei-TuM">
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WFh-Ei-TuM">
                                 <rect key="frame" x="84.666666666666686" y="241" width="224" height="114"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="us"/>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="u3X-nH-vqK"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -41,18 +50,16 @@
                             <constraint firstItem="x4c-Pu-csV" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="HAX-rh-Tcs"/>
                             <constraint firstItem="3eN-97-rtH" firstAttribute="top" secondItem="WFh-Ei-TuM" secondAttribute="bottom" constant="8" symbolic="YES" id="Pf0-xL-EAm"/>
                             <constraint firstItem="3eN-97-rtH" firstAttribute="centerX" secondItem="WFh-Ei-TuM" secondAttribute="centerX" id="Qxb-69-rBG"/>
-                            <constraint firstItem="3eN-97-rtH" firstAttribute="top" secondItem="WFh-Ei-TuM" secondAttribute="bottom" constant="18" id="R3f-4v-0RL"/>
                             <constraint firstItem="3eN-97-rtH" firstAttribute="centerX" secondItem="WFh-Ei-TuM" secondAttribute="centerX" id="Ynd-06-4uU"/>
                             <constraint firstItem="3eN-97-rtH" firstAttribute="centerX" secondItem="WFh-Ei-TuM" secondAttribute="centerX" id="Z22-L0-E4N"/>
                             <constraint firstItem="3eN-97-rtH" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="cVR-Zk-Wj1"/>
-                            <constraint firstItem="WFh-Ei-TuM" firstAttribute="top" secondItem="x4c-Pu-csV" secondAttribute="bottom" constant="26" id="gn5-Ut-GdK"/>
-                            <constraint firstItem="3eN-97-rtH" firstAttribute="top" secondItem="WFh-Ei-TuM" secondAttribute="bottom" constant="18" id="ijM-a7-hUw"/>
                             <constraint firstItem="3eN-97-rtH" firstAttribute="firstBaseline" secondItem="WFh-Ei-TuM" secondAttribute="baseline" constant="22" symbolType="layoutAnchor" id="oFq-P1-qne"/>
                             <constraint firstItem="WFh-Ei-TuM" firstAttribute="top" secondItem="x4c-Pu-csV" secondAttribute="bottom" constant="8" symbolic="YES" id="wwj-cU-WGx"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="usl-SX-K7x"/>
                     <connections>
+                        <outlet property="NavItem" destination="usl-SX-K7x" id="dNR-bF-F6p"/>
                         <outlet property="button1" destination="x4c-Pu-csV" id="f1r-fi-Nf5"/>
                         <outlet property="button2" destination="WFh-Ei-TuM" id="rAn-L5-sLd"/>
                         <outlet property="button3" destination="3eN-97-rtH" id="mu7-r8-YE6"/>
