--- a/GuessTheFlag/Base.lproj/Main.storyboard
+++ b/GuessTheFlag/Base.lproj/Main.storyboard
@@ -18,6 +18,9 @@
                         <subviews>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3eN-97-rtH">
                                 <rect key="frame" x="84.666666666666686" y="363" width="224" height="114"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="3eN-97-rtH" secondAttribute="height" multiplier="112:57" id="sTu-9x-efB"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="us"/>
                                 <connections>
@@ -26,6 +29,9 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x4c-Pu-csV">
                                 <rect key="frame" x="84.666666666666686" y="119" width="224" height="114"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="x4c-Pu-csV" secondAttribute="height" multiplier="112:57" id="WEI-PK-t3d"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="us"/>
                                 <connections>
@@ -34,6 +40,9 @@
                             </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WFh-Ei-TuM">
                                 <rect key="frame" x="84.666666666666686" y="241" width="224" height="114"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="WFh-Ei-TuM" secondAttribute="height" multiplier="112:57" id="89d-fs-fRN"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="us"/>
                                 <connections>
@@ -50,9 +59,12 @@
                             <constraint firstItem="x4c-Pu-csV" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="HAX-rh-Tcs"/>
                             <constraint firstItem="3eN-97-rtH" firstAttribute="top" secondItem="WFh-Ei-TuM" secondAttribute="bottom" constant="8" symbolic="YES" id="Pf0-xL-EAm"/>
                             <constraint firstItem="3eN-97-rtH" firstAttribute="centerX" secondItem="WFh-Ei-TuM" secondAttribute="centerX" id="Qxb-69-rBG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="3eN-97-rtH" secondAttribute="bottom" constant="20" id="Xz8-Tm-tKV"/>
+                            <constraint firstItem="3eN-97-rtH" firstAttribute="height" secondItem="WFh-Ei-TuM" secondAttribute="height" id="YT5-AE-lDU"/>
                             <constraint firstItem="3eN-97-rtH" firstAttribute="centerX" secondItem="WFh-Ei-TuM" secondAttribute="centerX" id="Ynd-06-4uU"/>
                             <constraint firstItem="3eN-97-rtH" firstAttribute="centerX" secondItem="WFh-Ei-TuM" secondAttribute="centerX" id="Z22-L0-E4N"/>
                             <constraint firstItem="3eN-97-rtH" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="cVR-Zk-Wj1"/>
+                            <constraint firstItem="WFh-Ei-TuM" firstAttribute="height" secondItem="x4c-Pu-csV" secondAttribute="height" id="m2U-9D-mgm"/>
                             <constraint firstItem="3eN-97-rtH" firstAttribute="firstBaseline" secondItem="WFh-Ei-TuM" secondAttribute="baseline" constant="22" symbolType="layoutAnchor" id="oFq-P1-qne"/>
                             <constraint firstItem="WFh-Ei-TuM" firstAttribute="top" secondItem="x4c-Pu-csV" secondAttribute="bottom" constant="8" symbolic="YES" id="wwj-cU-WGx"/>
                         </constraints>
